--- a/project1.html
+++ b/project1.html
@@ -1,1 +1,43 @@
+<! doctype html>
+<html>
+<head>
+<meta charset="utf-8"/>
+<meta name ="viewport" content="width=device-width,initial-scale=1.0"/>
+<title>ownworldwebsite</title>
+</head>
+<body>
+<header class="header">
+<a href="use any link" target="_blank">our world</a>
+<nav class="navbar">
+<ul class="navlist">
+<li><a href="uselink" class="navlink">Home</a></li>
+<li><a href="uselink" class="navlink">About</a></li>
+<li><a href="uselink" class="navlink">services</a></li>
+<li><a href ="uselink" class="navlink">contact us</a></li>
+</ul>
+</nav>
+<div class="nav_bar">
+<ion-icon name="menu-outline" class="nav_icon"></ion-icon>
+<ion-icon name="close-outline" class="nav_icon></ion-icon>
+</div>
+</header>
 
+ <main>
+ <section class="section-hero">
+ <div class="hero">
+ <p>Hero section Plz Subscribe to thapa technical channel</p>
+ </div>
+ </section>
+ </main>
+  
+  <section class="section-services">
+  <div class="hero">
+  <p>Services section</p>
+  </div>
+  </section>
+    
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.co <script src="index.js"></script>
+ <script src="index.js"></script>
+ </body>
+ </html>
