--- a/project1.html
+++ b/project1.html
@@ -25,7 +25,7 @@
  <main>
  <section class="section-hero">
  <div class="hero">
- <p>Hero section Plz Subscribe to thapa technical channel</p>
+ <p>hello to everyone ... hope youall are doing wonderful</p>
  </div>
  </section>
  </main>
